--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CatApi\CatApi.csproj" />
+  </ItemGroup>
 </Project>
